--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "csstack",
-  "version": "1.2.5",
-  "description": "",
+  "version": "1.3.0",
+  "description": "A tiny SASS framework",
   "main": "index.js",
-  "mode": "development",
+  "mode": "production",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx webpack --config webpack.config.js",
